Trennung Java8 -> 16, Records.