@@ -1,4 +1,4 @@
-package de.ksbrwsk.streams;
+package de.ksbrwsk.streams.java16;
 
 import lombok.extern.log4j.Log4j2;
 import org.junit.jupiter.api.DisplayName;
@@ -8,11 +8,11 @@ import java.time.LocalDate;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Stream;
 
-import static de.ksbrwsk.streams.Geschlecht.WEIBLICH;
+import static de.ksbrwsk.streams.java16.Geschlecht.WEIBLICH;
 import static java.util.Comparator.comparing;
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.*;
 
 @Log4j2
@@ -21,62 +21,66 @@ public class StreamTest {
     @Test
     @DisplayName("Summmiere alle Integer in der Liste")
     void sum() {
-        List<Integer> numbers = Fixtures.createIntegerList();
+        Stream<Integer> numbers = Fixtures.createIntegerList();
         int sum = numbers
-                .stream()
                 .mapToInt(Integer::intValue)
                 .sum();
         assertEquals(sum, 55L);
     }
 
     @Test
+    @DisplayName("Wandle Strings in Imteger, summmiere alle Integer in der Liste")
+    void sumOfStringValues() {
+        Stream<String> stringNumbers = Stream.of("1", "2", "3", "4", "5", "6");
+        int sum = stringNumbers
+                .mapToInt(Integer::parseInt)
+                .sum();
+        assertEquals(sum, 21L);
+    }
+
+    @Test
     @DisplayName("Liste alle geraden Zahlen der Liste")
     void evenNumbers() {
-        List<Integer> numbers = Fixtures.createIntegerList();
+        Stream<Integer> numbers = Fixtures.createIntegerList();
         List<Integer> even = numbers
-                .stream()
                 .filter(number -> number % 2 == 0)
-                .collect(toList());
+                .toList();
         even.forEach(log::info);
     }
 
     @Test
     @DisplayName("Gruppiere die Partner Liste nach Geschlecht")
     void groupBy() {
-        List<Partner> partners = Fixtures.createPartnerList();
+        Stream<Partner> partners = Fixtures.createPartnerList();
         Map<Geschlecht, List<Partner>> groupedBy = partners
-                .stream()
-                .collect(groupingBy(Partner::getGeschlecht));
+                .collect(groupingBy(Partner::geschlecht));
         groupedBy.entrySet().forEach(log::info);
     }
 
     @Test
     @DisplayName("Liefere den Partner mit dem ältesten Geburtsdatum")
     void min() {
-        List<Partner> partners = Fixtures.createPartnerList();
+        Stream<Partner> partners = Fixtures.createPartnerList();
         partners
-                .stream()
-                .min(comparing(Partner::getGeburtsdatum))
+                .min(comparing(Partner::geburtsdatum))
                 .ifPresent(log::info);
     }
 
     @Test
     @DisplayName("Liefere den Partner mit dem jüngsten Geburtsdatum")
     void max() {
-        List<Partner> partners = Fixtures.createPartnerList();
+        Stream<Partner> partners = Fixtures.createPartnerList();
         partners
-                .stream()
-                .max(comparing(Partner::getGeburtsdatum))
+                .max(comparing(Partner::geburtsdatum))
                 .ifPresent(log::info);
     }
 
     @Test
     @DisplayName("Liefere den ersten Partner mit Nachnamen X")
     void find() {
-        List<Partner> partners = Fixtures.createPartnerList();
+        Stream<Partner> partners = Fixtures.createPartnerList();
         Optional<Partner> meiser = partners
-                .stream()
-                .filter(partner -> partner.getNachname().equalsIgnoreCase("meiser"))
+                .filter(partner -> partner.nachname().equalsIgnoreCase("meiser"))
                 .findFirst();
         assertTrue(meiser.isPresent());
         log.info(meiser.get());
@@ -85,30 +89,27 @@ public class StreamTest {
     @Test
     @DisplayName("Kein Treffer bei Nachname X")
     void noneMatch() {
-        List<Partner> partners = Fixtures.createPartnerList();
+        Stream<Partner> partners = Fixtures.createPartnerList();
         boolean noneMatch = partners
-                .stream()
-                .noneMatch(partner -> partner.getNachname().equalsIgnoreCase("borat"));
+                .noneMatch(partner -> partner.nachname().equalsIgnoreCase("borat"));
         assertTrue(noneMatch);
     }
 
     @Test
     @DisplayName("Ein Treffer bei Nachhname X")
     void oneMatch() {
-        List<Partner> partners = Fixtures.createPartnerList();
+        Stream<Partner> partners = Fixtures.createPartnerList();
         boolean match = partners
-                .stream()
-                .anyMatch(partner -> partner.getNachname().equalsIgnoreCase("meiser"));
+                .anyMatch(partner -> partner.nachname().equalsIgnoreCase("meiser"));
         assertTrue(match);
     }
 
     @Test
     @DisplayName("Alle Treffer mit Geburtsdatum später X")
     void allMatch() {
-        List<Partner> partners = Fixtures.createPartnerList();
+        Stream<Partner> partners = Fixtures.createPartnerList();
         boolean allMatch = partners
-                .stream()
-                .allMatch(partner -> partner.getGeburtsdatum()
+                .allMatch(partner -> partner.geburtsdatum()
                         .isAfter(LocalDate.of(1980, 1, 1)));
         assertFalse(allMatch);
     }
@@ -116,11 +117,10 @@ public class StreamTest {
     @Test
     @DisplayName("Liefere alle weiblichen Partner")
     void filter() {
-        List<Partner> partners = Fixtures.createPartnerList();
+        Stream<Partner> partners = Fixtures.createPartnerList();
         List<Partner> frauen = partners
-                .stream()
-                .filter(partner -> partner.getGeschlecht().equals(WEIBLICH))
-                .collect(toList());
+                .filter(partner -> partner.geschlecht().equals(WEIBLICH))
+                .toList();
         frauen.forEach(log::info);
         assertEquals(frauen.size(), 2);
     }
@@ -128,20 +128,18 @@ public class StreamTest {
     @Test
     @DisplayName("Sortiere die Partnerliste nach Nach- und Vorname")
     void sort() {
-        List<Partner> partners = Fixtures.createPartnerList();
+        Stream<Partner> partners = Fixtures.createPartnerList();
         List<Partner> sorted = partners
-                .stream()
-                .sorted(comparing(Partner::getNachname)
-                        .thenComparing(Partner::getVorname))
-                .collect(toList());
+                .sorted(comparing(Partner::nachname)
+                        .thenComparing(Partner::vorname))
+                .toList();
         sorted.forEach(log::info);
     }
 
     @Test
     @DisplayName("Logge alle Partner im Stream")
     void stream() {
-        List<Partner> partners = Fixtures.createPartnerList();
-        partners
-                .forEach(log::info);
+        Stream<Partner> partners = Fixtures.createPartnerList();
+        partners.forEach(log::info);
     }
 }
